# vector-windows

./: .gitignore  README.md  WINDOWS_PORT.md  index.html  package-lock.json  package.json  vite.config.ts
.claude/: settings.json
.github/workflows/: ci.yml  release-windows.yml
scripts/: release.sh
src/: App.tsx  index.css  platform.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: config.rs  fs_watch.rs  git.rs  main.rs  preview.rs  pty.rs  sessions.rs  sidebar.rs  usage.rs  worktree_session.rs
src/preview/: BinaryPlaceholder.tsx  CodeRenderer.tsx  DiffRenderer.tsx  ErrorPlaceholder.tsx  HtmlRenderer.tsx  ImageRenderer.tsx  MarkdownRenderer.tsx  MermaidRenderer.tsx  PdfRenderer.tsx  PreviewPane.tsx  TooLargePlaceholder.tsx  contextMenu.tsx  extensions.ts  linkProvider.ts  sniff.ts
src/shell/: autocompleteAddon.ts  cwdSniffer.ts  historyStore.ts
src/sidebar/: FileViewer.tsx  Sidebar.tsx  WorktreeChanges.tsx  WorktreesView.tsx  contextMenu.tsx  fileIcons.tsx  sidebarState.ts
